fix: alt image + overflow perfil

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -31,7 +31,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 415px;
+  max-width: 240px;
 }
 
 .profile__edit {
